--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <flatten-maven-plugin.version>1.2.2</flatten-maven-plugin.version>
         <junit.version>5.6.2</junit.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <to-string-verifier.version>1.4.8</to-string-verifier.version>
+        <equalsverifier.version>3.3</equalsverifier.version>
     </properties>
 
     <build>
