--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <hamcrest.version>2.2</hamcrest.version>
         <to-string-verifier.version>1.4.8</to-string-verifier.version>
         <equalsverifier.version>3.3</equalsverifier.version>
+        <immutables.version>2.8.2</immutables.version>
     </properties>
 
     <build>
