--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,12 +33,21 @@
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.glytching</groupId>
+            <artifactId>junit-extensions</artifactId>
+            <version>${junit-extensions.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.jparams</groupId>
             <artifactId>to-string-verifier</artifactId>
             <version>${to-string-verifier.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
