--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <to-string-verifier.version>1.4.8</to-string-verifier.version>
         <equalsverifier.version>3.3</equalsverifier.version>
         <immutables.version>2.8.2</immutables.version>
+        <junit-extensions.version>2.4.0</junit-extensions.version>
     </properties>
 
     <build>
